--- a/public/404.html
+++ b/public/404.html
@@ -4,64 +4,54 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  .error-page {
+    background-color: #f6f6f6;
+    font-family: "Avenir Next Cyr W00 Demi", Arial, sans-serif;
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
+  .error-page .container {
+    box-shadow: 0 2px 5px rgba(102,102,101,.2);
+    color: #222222;
     margin: 4em auto 0;
+    max-width: 660px;
   }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .error-page .container > img {
+    max-width: 100%;
   }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  .error-page .container > div {
+    padding: 30px;
   }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+  .error-page h2 {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 1.4;
+    margin: 0 0 .5rem;
+  }
+
+  .error-page h3 {
+    font-size: 24px;
+    font-weight: 400;
+    line-height 1.4;
+    margin: 0 0 .2rem;
+  }
+
+  .error-page .contact-us {
+    color: #47d7ac;
   }
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
+<body class="error-page">
+  <div class="container">
+    <img src="https://marleyspoon.com/assets/ms/errors/not_found-cee2382f6c89b19ce629c3188076b8af.jpg" alt="Sad plate image">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h2>404 - Page not found</h2>
+      <h3>Please <a class="contact-us" href="https://marleyspoon.com/contact">contact us</a> if you have any questions</h3>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
